[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Graphics/3.fnt" type="BitmapFont" id=1]
[ext_resource path="res://assets/Graphics/monochrome_transparent_packed.png" type="Texture" id=2]
[ext_resource path="res://assets/Scripts/StartScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/Scripts/Fade.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="GDScript" id=5]
script/source = "extends Button


var scene = \"res://assets/Scenes/World.tscn\"
"

[sub_resource type="GDScript" id=1]
script/source = "extends RichTextLabel
var storedText = \"START\"

func _ready():
	bbcode_text = \"[center]\"+ storedText + \"[/center]\"
func _on_Label_mouse_entered():
	bbcode_text = \"[center][wave][rainbow val=0.8 sat=0.1]\"+ storedText + \"[/wave][/center][/rainbow]\"
	print_debug(\"HELLO\")


func _on_Label_mouse_exited():
	bbcode_text = \"[center]\"+ storedText + \"[/center]\"
"

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="GDScript" id=2]
script/source = "extends RichTextLabel
var storedText = \"OPTIONS\"

func _ready():
	bbcode_text = \"[center]\"+ storedText + \"[/center]\"
func _on_Label_mouse_entered():
	bbcode_text = \"[center][wave][rainbow val=0.8 sat=0.1]\"+ storedText + \"[/wave][/center][/rainbow]\"
	print_debug(\"HELLO\")


func _on_Label_mouse_exited():
	bbcode_text = \"[center]\"+ storedText + \"[/center]\"
"

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="GDScript" id=3]
script/source = "extends RichTextLabel
var storedText = \"QUIT\"

func _ready():
	bbcode_text = \"[center]\"+ storedText + \"[/center]\"
func _on_Label_mouse_entered():
	bbcode_text = \"[center][wave][rainbow val=0.8 sat=0.1]\"+ storedText + \"[/wave][/center][/rainbow]\"
	print_debug(\"HELLO\")


func _on_Label_mouse_exited():
	bbcode_text = \"[center]\"+ storedText + \"[/center]\"
"

[sub_resource type="Animation" id=4]
resource_name = "Fade IN"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 200.0
margin_top = 150.0
margin_right = 1720.0
margin_bottom = 930.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1520.0
margin_bottom = 352.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 356.0
margin_right = 1520.0
margin_bottom = 780.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 1520.0
margin_bottom = 424.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="StartButton" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 28.0
margin_right = 1520.0
margin_bottom = 148.0
rect_min_size = Vector2( 1520, 120 )
custom_styles/focus = SubResource( 6 )
flat = true
script = SubResource( 5 )

[node name="Label" type="RichTextLabel" parent="Menu/CenterRow/Buttons/StartButton"]
margin_top = 20.0
margin_right = 380.0
margin_bottom = 39.0
rect_scale = Vector2( 4, 4 )
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "START
"
text = "START
"
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 152.0
margin_right = 1520.0
margin_bottom = 272.0
rect_min_size = Vector2( 1520, 120 )
custom_styles/focus = SubResource( 7 )
flat = true

[node name="Label" type="RichTextLabel" parent="Menu/CenterRow/Buttons/OptionsButton"]
margin_top = 20.0
margin_right = 380.0
margin_bottom = 39.0
rect_scale = Vector2( 4, 4 )
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "START
"
text = "START
"
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 276.0
margin_right = 1520.0
margin_bottom = 396.0
rect_min_size = Vector2( 1520, 120 )
custom_styles/focus = SubResource( 8 )
flat = true

[node name="Label" type="RichTextLabel" parent="Menu/CenterRow/Buttons/QuitButton"]
margin_top = 20.0
margin_right = 380.0
margin_bottom = 39.0
rect_scale = Vector2( 4, 4 )
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "START
"
text = "START
"
script = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlavorText" type="RichTextLabel" parent="."]
margin_left = 200.0
margin_top = 878.0
margin_right = 1720.0
margin_bottom = 938.0
rect_min_size = Vector2( 1520, 60 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[right]CREATED BY WAH 2020[/right]"
text = "CREATED BY WAH 2020"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fade"]
"anims/Fade IN" = SubResource( 4 )
[connection signal="pressed" from="Menu/CenterRow/Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/StartButton/Label" to="Menu/CenterRow/Buttons/StartButton/Label" method="_on_Label_mouse_entered"]
[connection signal="mouse_exited" from="Menu/CenterRow/Buttons/StartButton/Label" to="Menu/CenterRow/Buttons/StartButton/Label" method="_on_Label_mouse_exited"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/OptionsButton/Label" to="Menu/CenterRow/Buttons/OptionsButton/Label" method="_on_Label_mouse_entered"]
[connection signal="mouse_exited" from="Menu/CenterRow/Buttons/OptionsButton/Label" to="Menu/CenterRow/Buttons/OptionsButton/Label" method="_on_Label_mouse_exited"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/QuitButton/Label" to="Menu/CenterRow/Buttons/QuitButton/Label" method="_on_Label_mouse_entered"]
[connection signal="mouse_exited" from="Menu/CenterRow/Buttons/QuitButton/Label" to="Menu/CenterRow/Buttons/QuitButton/Label" method="_on_Label_mouse_exited"]
[connection signal="fade_finished" from="Fade" to="." method="_on_Fade_fade_finished"]
[connection signal="animation_finished" from="Fade/AnimationPlayer" to="Fade" method="_on_AnimationPlayer_animation_finished"]
